Sat, 20 Jan 2007 18:37:25 +0100 Dodji Seketeli

	* gtksourceview/src/sourcebuffer.hg, docs/reference/reference-index.txt:
	  remove the main page doc from sourcebuffer.hg and put it in
	  doc/reference/reference-index.txt
	* docs/reference/Doxyfile.in, docs/reference/Makefile.am:
	  change this accordingly.

Sun, 14 Jan 2007 11:28:25 +0100 Dodji Seketeli

	*  gtksourceview/src/sourceview.hg: updated API docs.
	*  NEWS: updated this

Fri, 22 Dec 2006 23:46:21 +0100 Dodji Seketeli

	* gtksourceview/gtksourceviewmm.h: updated this to include all the *.h
	  files of gsvmm.
	* gtksourceview/src/sourceiter.ccg,hg: wrapped the SourceIter class.
	* tests/test-search.cpp: added a test for the search api.
	* tests/test-basic.cpp: udpated this to include <gtksourceviewmm.h>
	  only.

2006-12-06  Johannes Schmid <jhs@gnome.org>

	* gtksourceview/src/sourcebuffer.hg:
	   Fixed type in end_not_undoable_action() which was actually
	   end_notundoable_action()

2006-11-13  Murray Cumming  <murrayc@murrayc.com>

	* docs/reference/Makefile.am: Define docdir, so make install succeeds.

2006-11-13  Murray Cumming  <murrayc@murrayc.com>

	* gtksourceview/src/sourcebuffer.hg:
	* gtksourceview/src/sourcelanguage.hg:
	* gtksourceview/src/sourcemarker.hg:
	* gtksourceview/src/sourceview.hg:
	* tools/m4/convert_gtksourceviewmm.m4: Various const corrections. Some 
	get_*() methods were not const. Some get_*() methods had both const and non-const 
	overloads, although they returned by value. Some get_*() that returned by RefPtr 
	needed get_*() overloads.
	Used refreturn in .hg files with get_*() methods, instead of specifying it in the 
	conversion in the .m4 file, because the extra ref is not always needed.

Sat, 11 Nov 2006 16:20:21 +0100 Dodji Seketeli

	* gtksourceview/src/*.hg: update the API docs. All the classes are now
	  basically documented.
	* docs/reference/Makefile.am: make install now installs the docs
	  in docdir/reference/html. APIDOCs are shipped in the tarball now.
