@@ -19,6 +19,7 @@ all: html/index.html
 
 clean-local:
 	rm -rf html
+	rm doxygen-warnings.txt
 
 EXTRA_DIST=$(doxyfile) $(htmlfiles) \
 $(pngfiles) $(giffiles) $(cssfiles) \
