@@ -1,3 +1,11 @@
+Sun, 21 Jan 2007 12:22:02 +0100 Dodji Seketeli
+
+	* docs/reference/Doxyfile.in: generate doc files in builddir, not
+	  srcdir.
+	* docs/reference/Makefile.am: remove the doxygen-warning.txt
+	  at dist-clean time.
+	* NEWS: update this to prepare 0.3
+
 Sat, 20 Jan 2007 18:37:25 +0100 Dodji Seketeli
 
 	* gtksourceview/src/sourcebuffer.hg, docs/reference/reference-index.txt:
